# sport

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: lint.yaml
app/core/apps/users/: forms.py  models.py  views.py
app/core/apps/users/templates/users/: register.html  user_profile.html
app/core/config/: settings.py  urls.py
app/core/templates/base/: base.html  header.html
core/apps/common/: models.py
core/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  views.py
core/apps/users/migrations/: 0001_initial.py
core/apps/users/templates/users/: admin_main_page.html  login.html  user_main_page.html
core/config/: asgi.py  settings.py  urls.py  wsgi.py
core/templates/base/: header.html
