[tool.poetry]
name = "Sport Application"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.0.0"
pyproject-flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ["FUTURE", "STDLIB", "DJANGO", "MODELS", "VIEWS", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
known_django = "django*"
known_models = "*models"
known_views = "*views"
force_sort_within_sections = true
line_length = 100
multi_line_output=3
include_trailing_comma = true
lines_between_sections=1

[tool.flake8]
max-line-length = 100
exclude = ["migrations", "/migrations/", "/settings/", ]

[tool.black]
line-length = 100
include = '.pyi?$'